Fix data prep, plotting, and docs for sf/terra migration
- Fix timezone handling with proper on.exit() cleanup
- Fix merge() calls to use as.data.frame() for crosswalk compatibility
- Add missing ggplot2 and scales imports to NAMESPACE
- Add grid package to Imports
- Add crosswalk data retrieval option
- Update vignettes for sf/terra migration
- Remove .DS_Store and add proper .gitignore rules

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,15 @@
 .Rhistory
 .RData
 .Ruserdata
+
+# macOS
+.DS_Store
+.DS_Store?
+
+# R CMD check artifacts
+.Rcheck/
+*.Rcheck/
+
+# Build artifacts
+*.tar.gz
+*.tgz
