Fix critical code issues and implicit SplitR dependency
- Add SplitR as Suggests with Remotes for GitHub installation
- Implement local create_grid() to avoid SplitR dependency for grid creation
- Add graceful error handling for get_met_gdas1() and hysplit_trajectory()
  with clear install instructions when SplitR is missing
- Fix rankfacs_by_popwgt_location(): move validation before data conversion
- Fix disperser_link_*() functions: replace self-referential defaults
  with explicit values (duration=240, res.link=12000)
- Fix plot_units_ranked(): filter data.ranked by year for merge consistency
- Remove ~60 lines of unreachable dead code from rankfacs function

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -56,7 +56,10 @@ Suggests:
     rmarkdown,
     testthat (>= 3.0.0),
     rnaturalearth,
-    downloader
+    downloader,
+    SplitR
+Remotes:
+    rich-iannone/SplitR
 VignetteBuilder: knitr
 RoxygenNote: 7.2.3
 Config/testthat/edition: 3
