Add robust error handling and move SplitR to Imports
- download_file() now checks file existence, size, and download status with hard stops
- get_data() validates files exist before unzipping/reading with clear error messages
- SplitR moved from Suggests to Imports (runtime requirement for HYSPLIT)
- Added exit status checks for HYSPLIT binary and parhplot system() calls
- Updated README to clearly document SplitR as required dependency
- Improved error messages for missing binaries and failed executions

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -48,7 +48,8 @@ Imports:
     utils,
     grDevices,
     methods,
-    grid
+    grid,
+    SplitR
 Suggests:
     ggmap,
     ggrepel,
@@ -56,8 +57,7 @@ Suggests:
     rmarkdown,
     testthat (>= 3.0.0),
     rnaturalearth,
-    downloader,
-    SplitR
+    downloader
 Remotes:
     rich-iannone/SplitR
 VignetteBuilder: knitr
