Restore magrittr/maps, fix CI vignette handling
- Restore magrittr to Imports with @importFrom %>%
- Restore maps to Imports (required by ggplot2::map_data)
- Remove unused ncdf4 from Imports
- Add package documentation file with pipe import
- Update CI to use --ignore-vignettes and build_args

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -64,6 +64,7 @@ importFrom(fst,read.fst)
 importFrom(fst,write.fst)
 importFrom(lubridate,month)
 importFrom(lubridate,year)
+importFrom(magrittr,"%>%")
 importFrom(parallel,clusterEvalQ)
 importFrom(parallel,clusterExport)
 importFrom(parallel,detectCores)
