Add namespace prefixes for base functions, fix maps import
- Add utils:: prefix to write.table, read.csv, read.table
- Add stats:: prefix to quantile, na.omit
- Add @import maps to package documentation
- Update CI with _R_CHECK_FORCE_SUGGESTS_=false

--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -21,6 +21,7 @@ jobs:
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
       R_KEEP_PKG_SOURCE: yes
+      _R_CHECK_FORCE_SUGGESTS_: false
 
     steps:
       - uses: actions/checkout@v4
@@ -37,6 +38,8 @@ jobs:
 
       - uses: r-lib/actions/check-r-package@v2
         with:
-          args: 'c("--no-manual", "--ignore-vignettes", "--no-build-vignettes")'
+          args: 'c("--no-manual", "--as-cran")'
           build_args: 'c("--no-build-vignettes")'
           error-on: '"error"'
+        env:
+          _R_CHECK_CRAN_INCOMING_REMOTE_: false
