--- a/NAMESPACE
+++ b/NAMESPACE
@@ -52,6 +52,7 @@ export(transform_crs)
 export(trim_pbl)
 export(trim_zero)
 export(write_shapefile)
+import(maps)
 importFrom(data.table,copy)
 importFrom(data.table,data.table)
 importFrom(data.table,dcast)
