--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -38,8 +38,6 @@ jobs:
 
       - uses: r-lib/actions/check-r-package@v2
         with:
-          args: 'c("--no-manual", "--as-cran")'
+          args: 'c("--no-manual", "--ignore-vignettes")'
           build_args: 'c("--no-build-vignettes")'
           error-on: '"error"'
-        env:
-          _R_CHECK_CRAN_INCOMING_REMOTE_: false
