--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,9 +13,10 @@ Author: Lucas Henneman [aut, cre],
 Maintainer: Lucas Henneman <lhenneman@gmail.com>
 Description: Runs HYSPLIT many times and calculates the HYSPLIT Average
     Dispersion (HyADS) exposure metric. Results can be aggregated to ZIP code
-    level to create national estimates of exposure from various sources. The
-    package uses code adapted from the SplitR package and uses modern spatial
-    libraries (sf, terra).
+    level to create national estimates of exposure from various sources. Uses
+    modern spatial libraries (sf, terra). HYSPLIT binaries can be provided via
+    the optional 'SplitR' package (available from GitHub at
+    <https://github.com/rich-iannone/SplitR>) or via explicit binary paths.
 URL: https://github.com/lhenneman/disperseR
 BugReports: https://github.com/lhenneman/disperseR/issues
 License: GPL-3
