Add timeout to download_file, fix CI workflow
- download_file(): Add 5-minute timeout for large downloads
- CI: Use hard dependencies only + testthat to reduce failures
- CI: Fix error-on syntax (remove extra quotes)

--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -33,11 +33,11 @@ jobs:
 
       - uses: r-lib/actions/setup-r-dependencies@v2
         with:
-          extra-packages: any::rcmdcheck
-          needs: check
+          extra-packages: any::rcmdcheck, any::testthat
+          dependencies: "hard"
 
       - uses: r-lib/actions/check-r-package@v2
         with:
           args: 'c("--no-manual", "--ignore-vignettes")'
           build_args: 'c("--no-build-vignettes")'
-          error-on: '"error"'
+          error-on: error
