Docs and build hygiene: update create_dirs() guidance, add purl=FALSE to vignettes
- README now reflects tempdir() default and SplitR GitHub install path
- All vignette chunks use purl=FALSE to prevent code extraction during checks
- .Rbuildignore expanded to exclude *.Rcheck and tarball artifacts

--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -4,8 +4,10 @@
 ^\.github$
 ^\.Rcheck$
 ^\.\.Rcheck$
+^.*\.Rcheck$
 ^\.DS_Store$
 ^\.git$
 ^\.gitignore$
 ^LICENSE\.md$
 ^cran-comments\.md$
+^disperseR_.*\.tar\.gz$
