--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,6 @@
 disperseR_Fork_Assessment_and_Roadmap.md
 verification/config.R
 Rplots.pdf
+
+# Student replication study (not committed)
+replication/
