Add validate_pipeline(), unify splitr references, improve replication robustness
- Add validate_pipeline() for quick output summaries and sanity checks
- Standardize on lowercase 'splitr' throughout (remove SplitR fallback)
- calculate_exposure() now uses cached exp_dir from create_dirs()
- Replication scripts: add CRS to PBL fallback, fix flow control
- README: add support matrix, setup checklist, performance tips
- Exclude replication/ and assessment doc from build

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,8 +15,8 @@ Description: Runs HYSPLIT many times and calculates the HYSPLIT Average
     Dispersion (HyADS) exposure metric. Results can be aggregated to ZIP code
     level to create national estimates of exposure from various sources. Uses
     modern spatial libraries (sf, terra). HYSPLIT binaries can be provided via
-    the optional 'SplitR' package (available from GitHub at
-    <https://github.com/rich-iannone/SplitR>) or via explicit binary paths.
+    the optional 'splitr' package (available from GitHub at
+    <https://github.com/rich-iannone/splitr>) or via explicit binary paths.
 URL: https://github.com/josbyb2020/disperseR-test2026
 BugReports: https://github.com/josbyb2020/disperseR-test2026/issues
 License: GPL-3
@@ -42,6 +42,7 @@ Imports:
     fst,
     grid
 Suggests:
+    splitr,
     ggmap,
     ggrepel,
     knitr,
