--- a/NAMESPACE
+++ b/NAMESPACE
@@ -51,6 +51,7 @@ export(subset_nc_date)
 export(transform_crs)
 export(trim_pbl)
 export(trim_zero)
+export(validate_pipeline)
 export(write_shapefile)
 import(maps)
 importFrom(data.table,copy)
