Add Remotes field for splitr (GitHub-only package)
pak needs to resolve all dependencies even with hard-only install.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -50,6 +50,8 @@ Suggests:
     testthat (>= 3.0.0),
     rnaturalearth,
     downloader
+Remotes:
+    rich-iannone/splitr
 VignetteBuilder: knitr
 RoxygenNote: 7.3.3
 Config/testthat/edition: 3
