Add Windows hardening: zombie cleanup, file locking, AV warnings
- cleanup_hysplit_zombies(): kills orphaned HYSPLIT processes holding file locks
- safe_file_read(): retry logic for Windows file locking delays
- warn_av_interference(): alerts when batch size may trigger antivirus
- Auto-cleanup before batch runs on Windows
- Document AV/EDR troubleshooting in README

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(add_params)
 export(add_species)
 export(calculate_exposure)
 export(check_spatial_packages)
+export(cleanup_hysplit_zombies)
 export(combine_monthly_links)
 export(create_dirs)
 export(create_disp_model)
