Fix cross-platform CI: install disperseR from checkout before testing

--- a/.github/workflows/test-crossplatform.yml
+++ b/.github/workflows/test-crossplatform.yml
@@ -35,6 +35,11 @@ jobs:
             github::rich-iannone/splitr
           needs: check
 
+      - name: Install disperseR from checkout
+        run: |
+          remotes::install_local(".", dependencies = FALSE, force = TRUE)
+        shell: Rscript {0}
+
       - name: Test disperseR
         run: |
           cat("=== disperseR Cross-Platform Test ===\n")
